# sheptun

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  run.sh
.claude/: CLAUDE.md  settings.json
.claude/agents/analyze-logs/: AGENT.md
.claude/hooks/: load-project-memory.sh
.claude/skills/review-replacements/: CRITERIA.md  PROMPT_TUNING.md  SENSITIVE.md  SKILL.md
.claude/skills/review-replacements/scripts/: make_check.py
.kb/memory/: deploy.md  llm-enhancement.md  log-analyzer.md  memory.md  text-insertion.md
benchmarks/: README.md  __init__.py  cli.py  metrics.py  runner.py  samples.py  types.py
benchmarks/correctors/: __init__.py  jamspell.py  noop.py  sage.py
config/: commands.yaml
docs/: ROADMAP.md  asr-ensemble-research.md  asr-research.md  benchmark-correctors.md  finetune-spec.md  gigaam-english-terms.md  heuristics-from-github.md  llm-enhancement-research.md  llm-usage-from-github.md  roadmap.md  screen-context-research.md  voiceink-research.md  whisper-personalization.md
src/sheptun/: __init__.py  app_builder.py  apple_speech.py  audio.py  benchmark.py  cli.py  commands.py  dataset.py  engine.py  finetune.py  focus.py  formatting.py  hotkeys.py  i18n.py  keyboard.py  log_analyzer.py  menubar.py  parakeet.py  qwen_asr.py  recognition.py  remote.py  settings.py  spelling.py  status.py  text_cleanup.py  types.py  verification.py
src/sheptun/config/: __init__.py  commands.yaml  replacements.yaml
src/sheptun/prompts/: __init__.py  replacements_system.md  replacements_user_intro.md  replacements_verify.md  whisper_initial.md
src/sheptun/resources/: generate_remote_icons.py
tests/: test_audio.py  test_benchmark.py  test_commands.py  test_engine.py  test_focus.py  test_formatting.py  test_hotkeys.py  test_i18n.py  test_keyboard.py  test_log_analyzer.py  test_menubar.py  test_parakeet.py  test_recognition.py  test_remote.py  test_settings.py  test_spelling.py  test_status.py  test_text_cleanup.py  test_verification.py
tests/benchmarks/: test_correctors.py  test_metrics.py  test_runner.py  test_samples.py
