[project]
name = "sheptun"
version = "0.1.0"
description = "Voice-controlled terminal for Russian language commands"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Dima" }]
keywords = ["voice", "terminal", "whisper", "russian", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "openai-whisper>=20231117",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Speech>=10.0",
    "pyobjc-framework-AVFoundation>=10.0",
    "rumps>=0.4.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "pynput>=1.7.6",
]

[project.optional-dependencies]
spelling = [
    "transformers>=4.30.0",
    "sentencepiece>=0.1.99",
]
verification = [
    "claude-agent-sdk>=0.1.0",
]
finetune = [
    "transformers>=4.36.0",
    "datasets>=2.14.0",
    "accelerate>=0.25.0",
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",
    "tensorboard>=2.14.0",
    "peft>=0.7.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pyright>=1.1.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
sheptun = "sheptun.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sheptun"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF001", # ambiguous unicode characters (expected for Russian text)
]

[tool.ruff.lint.isort]
known-first-party = ["sheptun"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["sheptun.settings._get_path", "sheptun.settings._get_tuple"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "whisper.*",
    "sounddevice.*",
    "Quartz.*",
    "Speech.*",
    "AVFoundation.*",
    "Foundation.*",
    "rumps.*",
    "PIL.*",
    "AppKit.*",
    "silero_vad.*",
    "torch.*",
    "pynput.*",
    "sage.*",
    "transformers.*",
    "claude_agent_sdk.*",
    "datasets.*",
    "evaluate.*",
    "peft.*",
    "jiwer.*",
    "accelerate.*",
    "tensorboard.*",
    "soundfile.*",
    "librosa.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
